--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>DiscoveryClient</module>
         <module>ClientCommon</module>
+        <module>ClientConfig</module>
     </modules>
     <packaging>pom</packaging>
 
