--- a/ClientConfig/pom.xml
+++ b/ClientConfig/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.jiangwei</groupId>
+        <groupId>com.jiangwei.cloud</groupId>
         <version>1.0-SNAPSHOT</version>
         <artifactId>cloud</artifactId>
     </parent>
-    <artifactId>ClientConfig</artifactId>
+    <artifactId>client-config</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
