--- a/DiscoveryClient/pom.xml
+++ b/DiscoveryClient/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.jiangwei</groupId>
+        <groupId>com.jiangwei.cloud</groupId>
         <artifactId>cloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -20,6 +20,10 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
         </dependency>
     </dependencies>
 
