--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jiangwei</groupId>
+    <groupId>com.jiangwei.cloud</groupId>
     <artifactId>cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>DiscoveryClient</module>
         <module>ClientCommon</module>
         <module>ClientConfig</module>
+        <module>Api</module>
+        <module>ApiProducer</module>
+        <module>ApiConsumer</module>
     </modules>
     <packaging>pom</packaging>
 
