--- a/Api/pom.xml
+++ b/Api/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>api</artifactId>
   <packaging>jar</packaging>
 
-  <name>api</name>
+  <name>cloud-api</name>
 
   <dependencies>
     <dependency>
