--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Api</module>
         <module>ApiProducer</module>
         <module>ApiConsumer</module>
+        <module>sentinel</module>
     </modules>
     <packaging>pom</packaging>
 
